--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="Main_Patient_State_1">정상</string>
     <string name="Main_Patient_State_2">위험</string>
     <string name="Main_Patient_State_3">긴급</string>
+    <string name="Main_Patient_ToDo_Hint">할일을 입력해주세요.</string>
     <!-- Main Google Map String -->
     <string name="Main_Map_Location">현재위치</string>
     <!-- Main Medical History String -->
@@ -46,13 +47,13 @@
     <string name="Preference_Patient_Disease_Text">환자 질병 설정을 합니다.</string>
     <string name="Preference_Patient_Etc">- 환자 기타사항 설정</string>
     <string name="Preference_Patient_Etc_Text">환자 기타사항 설정을 합니다.</string>
-    <string name="Preference_Patient_Name">환자 이름 설정</string>
+    <string name="Preference_Patient_Name">- 환자 이름 설정</string>
     <string name="Preference_Patient_Name_Text">환자 이름 설정을 합니다.</string>
-    <string name="Preference_Patient_Age">환자 나이 설정</string>
+    <string name="Preference_Patient_Age">- 환자 나이 설정</string>
     <string name="Preference_Patient_Age_Text">환자 나이 설정을 합니다.</string>
-    <string name="Preference_Patient_Sex">환자 성별 설정</string>
+    <string name="Preference_Patient_Sex">- 환자 성별 설정</string>
     <string name="Preference_Patient_Sex_Text">환자 성별 설정을 합니다.</string>
-    <string name="Preference_Patient_Smoking">환자 흡연여부 설정</string>
+    <string name="Preference_Patient_Smoking">- 환자 흡연여부 설정</string>
     <string name="Preference_Patient_Smoking_Text">환자 흡연여부 설정을 합니다.</string>
     <string name="Preference_Developer_State">- 개발자 정보</string>
     <string name="Preference_Developer_State_Text">개발자 정보를 확인합니다.</string>
